--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,5 +1,5 @@
 prompt         : "igcc> "
-compiler_cmd   : "g++ -x c++ -Wall -o $outfile - $include_dirs $lib_dirs $libs"
+compiler_cmd   : "g++ -x c++ -std=c++17 -Wall -o $outfile - $include_dirs $lib_dirs $libs"
 include_dir_cmd: "-I$cmd"
 lib_dir_cmd    : "-L$cmd"
 lib_cmd        : "-l$cmd"
