--- a/igcc/assets/config.yaml
+++ b/igcc/assets/config.yaml
@@ -1,4 +1,4 @@
-prompt         : "igcc> "
+prompt         : "> "
 compiler_cmd   : "g++ -x c++ -std=c++17 -Wall -o $outfile - $include_dirs $lib_dirs $libs"
 include_dir_cmd: "-I$cmd"
 lib_dir_cmd    : "-L$cmd"
