--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,12 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "igcc"
-version = "0.1.0"
+version = "0.1.1"
 description = "Interactive GCC - C/C++ REPL"
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 
-dependencies = ["PyYAML"]
+dependencies = ["PyYAML", "rich"]
 
 [project.optional-dependencies]
 dev = ["black", "isort", "autoflake", "ruff"]
@@ -36,5 +36,15 @@ line-length = 100
 indent-width = 4
 
 [tool.ruff.lint]
-select = ["E4", "E7", "E9", "F"]
-ignore = []
+select = [
+    "E",  # pycodestyle errors
+    "W",  # pycodestyle warnings
+    "F",  # pyflakes
+    "I",  # isort
+    "B",  # flake8-bugbear
+    "C4",  # flake8-comprehensions
+    "UP",  # pyupgrade
+]
+ignore = [
+    "E501",  # line too long, handled by black
+]
