(#13) Support multi-line input.

--- a/igcc/assets/config.yaml
+++ b/igcc/assets/config.yaml
@@ -1,5 +1,6 @@
-prompt         : "> "
-compiler_cmd   : "g++ -x c++ -std=c++17 -Wall -o $outfile - $include_dirs $lib_dirs $libs"
+prompt: "> "
+compiler_cmd: "g++ -x c++ -std=c++17 -Wall -o $outfile - $include_dirs $lib_dirs $libs"
 include_dir_cmd: "-I$cmd"
-lib_dir_cmd    : "-L$cmd"
-lib_cmd        : "-l$cmd"
+lib_dir_cmd: "-L$cmd"
+lib_cmd: "-l$cmd"
+multiline_marker: ".m"
