--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,41 +1,25 @@
-# This is a basic workflow to help you get started with Actions
-
 name: tests
 
-# Controls when the action will run.
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  tests:
+    name: python
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v5
 
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.10'
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install .
+      - name: Install the project
+        run: uv sync --locked --all-extras --dev
 
-      # Run each *.sh test
-      - name: Run a multi-line script
-        run: |
-          for f in `ls tests`; do (cd tests/$f && ./run.sh); done
+      - name: Run tests
+        run: make test
