--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "PyYAML",
     "rich",
     "pyreadline3; platform_system=='Windows'",
+    "jinja2>=3.1.6",
 ]
 
 [project.optional-dependencies]
@@ -25,30 +26,22 @@ igcc = "igcc.run:repl"
 [tool.setuptools.package-data]
 igcc = ["assets/*"]
 
-[tool.ruff]
-# Exclude a variety of commonly ignored directories.
-exclude = [
-    ".git",
-    ".ipynb_checkpoints",
-    ".mypy_cache",
-    ".pytest_cache",
-    ".ruff_cache",
-    "venv",
-    "build",
-]
-line-length = 100
-indent-width = 4
-
 [tool.ruff.lint]
 select = [
-    "E",  # pycodestyle errors
-    "W",  # pycodestyle warnings
-    "F",  # pyflakes
-    "I",  # isort
-    "B",  # flake8-bugbear
-    "C4",  # flake8-comprehensions
-    "UP",  # pyupgrade
+    "E",    # pycodestyle errors
+    "W",    # pycodestyle warnings
+    "F",    # pyflakes
+    "B",    # flake8-bugbear
+    "C4",   # flake8-comprehensions
+    "SIM",  # flake8-simplify
+    "I",    # isort (import sorting)
+    "N",    # pep8-naming
+    "UP",   # pyupgrade (modern syntax)
+    "PERF", # performance rules
+    "FURB", # refurb
 ]
 ignore = [
     "E501",  # line too long, handled by black
+    "C901",  # too complex
+    "N802",  # function names
 ]
